--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,12 @@
     <body>
         <p>Welcome to the chat app!</p>
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-            const socket = io();
-            socket.on('connect', () => {
-            	console.log('Connected to server.');
-            });
+        <form id="form">
+            <input type="text" name="msgInput">
+            <button type="submit">Send</button>
+        </form>
 
-            socket.on('disconnect', () => {
-            	console.log('Disconnected from server.')
-            });
-        </script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
