--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
     <body>
         <p>Welcome to the chat app!</p>
 
+        <ul id="messages-container"></ul>
+
         <form id="form">
-            <input type="text" name="msgInput">
+            <input type="text" name="msgInput" placeholder="Type message here..." autofocus>
             <button type="submit">Send</button>
         </form>
 
