Add geolocation support via geolocation API

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <input type="text" name="msgInput" placeholder="Type message here..." autofocus>
             <button type="submit">Send</button>
         </form>
+        <button id="send-location">Send location</button>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js"></script>
