--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,39 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>NodeJS Chat App</title>
-    </head>
-    <body>
-        <p>Welcome to the chat app!</p>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NodeJS Chat App</title>
+    <link rel="stylesheet" href="/css/styles.css">
+  </head>
+  <body class="chat">
 
-        <ul id="messages-container"></ul>
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users"></div>
+    </div>
 
+    <div class="chat__main">
+      <ul id="messages-container" class="chat__messages"></ul>
+
+      <div class="chat__footer">
         <form id="form">
-            <input type="text" name="msgInput" placeholder="Type message here..." autofocus>
-            <button type="submit">Send</button>
+          <input
+            type="text"
+            name="msgInput"
+            placeholder="Type message here..."
+            autocomplete="off"
+            autofocus
+          >
+          <button type="submit">Send</button>
         </form>
         <button id="send-location">Send location</button>
+      </div>
+    </div>
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/index.js"></script>
-    </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
+  </body>
 </html>
